fix: improve disabled link colour contrast (#26)
To obey https://dequeuniversity.com/rules/axe/4.4/color-contrast

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -111,6 +111,7 @@ $dropdown-divider-bg: $gray-400;
 $dropdown-divider-margin-y: .5625rem;
 $dropdown-link-color: $primary;
 $dropdown-link-hover-color: $accent;
+$dropdown-link-disabled-color: $gray-700;
 $dropdown-header-color: $gray-700;
 $dropdown-item-padding-y: 3px;
 $dropdown-item-padding-x: 20px;
